--- a/Datastore.html
+++ b/Datastore.html
@@ -7,6 +7,7 @@
           <TITLE>Datastore Python Model Generator</TITLE>
        </HEAD>
        <BODY>
+       <div id="main_container">
         <div id="model_properties">
             <span id="model_name">Model Class Name: <input type="text" id="model_name_input" placeholder="ClassName"/></span>
             <br/><br/><br/>
@@ -27,6 +28,7 @@
        </div>
        <div id="generated_code">
 
+       </div>
        </div>
        </BODY>
     </HTML>
